@@ -155,3 +155,7 @@ so that you don't have to know by heart all of the string indexes.
 The <name> used in a dsp instruction has to be already declared by a str.
 If you don't it will be actually set as 0, so as long as you defined at
 least one string, the first one will be defaulted to.
+
+2.5 Multiple files
+
+See PC004 in CHANGES for reference.
