@@ -13,6 +13,9 @@ PC005:  2016-09-16
   Since PC004 solves the possible problem of needing to separate regular 'jumping'
   labels from function labels, the def instruction will be deprecated in favor of
   just lab.
+PC015:  2015-09-16
+  Remove any restriction on code size and make everything dynamic. I can afford to
+  just append at each new instruction in the parsing step.
 
 	2. Proposed
 
@@ -71,3 +74,6 @@ PC012:
   cpy	reg	reg	Copies the value of mem[a] to mem[b]. Both are litaddr.
 PC013:
   Make it so the nop instruction actually compiles into nothing.
+PC014:
+  Make it so referencing an undefined label OR a label for the 0-th address is
+  a compilation error.
